--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-  <p class="text">vite-vanilla-tailwind</p>
+  
+  <div class="w-screen h-screen flex flex-col justify-center items-center bg-slate-800">
+    <h2 class="text-2xl font-semibold text-slate-50">Hello !</h2>
+    <p class="text-lg text-slate-200 font-medium text-center">Vite Vanilla Tailwind</p>
+  </div>
+
+  <script src="/src/main.js" type="module"></script>
 </body>
 
 </html>
