--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vite-vanilla-tailwind</title>
+  <!-- <link rel="manifest" href="manifest.webmanifest"> --><!-- Uncomment for PWA Support -->
 </head>
 
 <body>
